# vk-test

./: pyproject.toml
backend/friends/: settings.py
infra/: docker-compose.yml
