[tool.poetry]
name = "vk-test"
version = "0.1.0"
description = ""
authors = ["Max Bazarov <bazaroffm@gmail.com>"]
readme = "README.md"
packages = [{include = "vk_test"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.1"
flake8 = "^6.0.0"
isort = "^5.12.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
djangorestframework-simplejwt = "^5.2.2"
djoser = "^2.2.0"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
